# elect

./: .travis.yml  Cargo.toml  elect.py  setup.py
src/: ballot_parser.rs  main.rs  usage.txt
vote/: Cargo.toml
vote/src/: combination.rs  hw_float.rs  lib.rs  proportional_completion.rs  schulze.rs  schulze_stv.rs  schwartz_set.rs  traits.rs  util.rs  vote_management.rs  weight_mpq.rs  weight_num.rs
